--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search Example</title>
-    <script src="dist/main.js" defer></script>
+    <script src="src/index.js" defer></script>
   </head>
   <body>
     <h1>Search Example Master</h1>
